# flowty

./: .gitignore  Cargo.toml  LICENSE  README.md  example1.dot  imgproc.rs  semilogs.md  t.py
.cargo/: config copy.toml
dichromate/: Cargo.toml  build.rs
dichromate/examples/: cc.rs  hlp.rs  mouse.rs  screen.rs  smthing.rs  texp.rs  xc.rs
dichromate/saves/: cnvt.rs  graph.rs  imgproc copy 10.rs  imgproc copy 2.rs  imgproc copy 3.rs  imgproc copy 4.rs  imgproc copy 5.rs  imgproc copy 6.rs  imgproc copy 7.rs  imgproc copy 8.rs  imgproc copy 9.rs  imgproc copy.rs  imgproc.rs  oklch.rs
dichromate/src/: flowio.rs  flowty.rs  instr.rs  lib.rs  puzzle.rs  solver.rs
dichromate/src/detectors/: cv.rs  mod.rs  ss.rs
scripts/: convert.py  correlation.py  gimplugin.py  mp.py  r.py  screenpx.py  u.py  visualize.py  zfch.py  zfindconnection.py
superdetect/: t1.py
