[package]
name = "dichromate"
version = "0.1.0"
edition = "2024"

[lib]
name = "dichromate"
path = "src/lib.rs"

[target.'cfg(windows)'.build-dependencies]
embed-manifest = "1.5.0"

[dependencies]
enigo = "0.6.1"
image = "0.25"
itertools = "0.14.0"
ndarray = "0.17.1"
opencv = { version = "0.97.2", features = ["clang-runtime"] }
petgraph = { version = "0.8.3", features = ["graphmap"] }
rayon = "1.11.0"
rustsat = "0.7.4"
rustsat-glucose = "0.7.4"
spin_sleep = "1.3.3"
strum = { version = "0.27.2", features = ["derive"] }
unordered-pair = "0.2.5"
xcap = "0.9.3"